--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,12 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
+    <string name="Homework2"> homework 2 </string>
+    <string name="Homework3"> homework 3 </string>
+    <string name="Homework4"> homework 4 </string>
+    <string name="Homework6"> homework 6 </string>
+    <string name="Homework7"> homework 7 </string>
+    <string name="click"> Click </string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
