--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="Homework6"> homework 6 </string>
     <string name="Homework7"> homework 7 </string>
     <string name="click"> Click </string>
+    <string name="close"> Close </string>
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="enter"> Enter </string>
