--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="Homework4"> homework 4 </string>
     <string name="Homework6"> homework 6 </string>
     <string name="Homework7"> homework 7 </string>
+    <string name="Homework8"> homework 8 </string>
     <string name="click"> Click </string>
     <string name="close"> Close </string>
     <string name="login">Login</string>
