--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="Homework8"> homework 8 </string>
     <string name="Homework9"> homework 9 </string>
     <string name="Homework10"> homework 10 </string>
+    <string name="Homework11"> homework 11 </string>
     <string name="click"> Click </string>
     <string name="close"> Close </string>
     <string name="login">Login</string>
