--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="Homework9"> homework 9 </string>
     <string name="Homework10"> homework 10 </string>
     <string name="Homework11"> homework 11 </string>
+    <string name="Homework12"> homework 12 </string>
     <string name="click"> Click </string>
     <string name="close"> Close </string>
     <string name="login">Login</string>
