--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="Homework11"> homework 11 </string>
     <string name="Homework12"> homework 12 </string>
     <string name="click"> Click </string>
+    <string name="limit"> Make Limit </string>
     <string name="close"> Close </string>
     <string name="login">Login</string>
     <string name="password">Password</string>
